# rnn-ns

./: CMakeLists.txt  readme.md  rnnnoise_improve_demo.cpp  rnnnoise_improve_demo2.c
include/: rnnoise2.h
